docs: Fix fit_random_coreset calls - remove mode parameter
Root cause identified: fit_random_coreset() does not accept mode parameter
- Systematic debugging revealed the actual issue
- fit_ddc_coreset supports mode, but fit_random_coreset does not
- Removed mode parameter from all fit_random_coreset/fit_stratified_coreset calls
- Created debug script and report documenting the investigation

--- a/docs/book/tutorials/label_aware_classification.ipynb
+++ b/docs/book/tutorials/label_aware_classification.ipynb
@@ -31,10 +31,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:24.055667Z",
-     "iopub.status.busy": "2025-11-15T18:19:24.055524Z",
-     "iopub.status.idle": "2025-11-15T18:19:24.062156Z",
-     "shell.execute_reply": "2025-11-15T18:19:24.061855Z"
+     "iopub.execute_input": "2025-11-15T18:36:01.095730Z",
+     "iopub.status.busy": "2025-11-15T18:36:01.095623Z",
+     "iopub.status.idle": "2025-11-15T18:36:01.102057Z",
+     "shell.execute_reply": "2025-11-15T18:36:01.101792Z"
     }
    },
    "outputs": [],
@@ -52,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:24.064084Z",
-     "iopub.status.busy": "2025-11-15T18:19:24.063932Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.628332Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.626815Z"
+     "iopub.execute_input": "2025-11-15T18:36:01.103576Z",
+     "iopub.status.busy": "2025-11-15T18:36:01.103482Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.250884Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.250573Z"
     }
    },
    "outputs": [
@@ -116,10 +116,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.669737Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.669484Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.829936Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.829412Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.253234Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.252859Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.398864Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.398393Z"
     }
    },
    "outputs": [
@@ -344,10 +344,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.831860Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.831714Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.849448Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.848047Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.400652Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.400425Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.406406Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.405995Z"
     }
    },
    "outputs": [
@@ -396,10 +396,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.868446Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.860683Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.909718Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.907618Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.408430Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.408156Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.425407Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.425139Z"
     }
    },
    "outputs": [
@@ -451,10 +451,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.914252Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.913943Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.063342Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.061227Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.427360Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.427222Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.452252Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.451973Z"
     }
    },
    "outputs": [
@@ -462,7 +462,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full-Data Baseline Metrics:\n",
+      "Full-Data Baseline Metrics:"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
       "  ROC AUC:  0.8316\n",
       "  Brier Score: 0.1291\n",
       "  Accuracy:    0.8181\n"
@@ -521,10 +528,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.071106Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.070877Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.075881Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.074963Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.454095Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.453927Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.456881Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.456105Z"
     }
    },
    "outputs": [
@@ -546,10 +553,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.079056Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.078723Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.086912Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.085360Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.459388Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.459226Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.463627Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.463288Z"
     }
    },
    "outputs": [
@@ -581,10 +588,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.092274Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.092014Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.136286Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.135094Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.465712Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.465404Z",
+     "iopub.status.idle": "2025-11-15T18:36:04.475108Z",
+     "shell.execute_reply": "2025-11-15T18:36:04.474609Z"
     }
    },
    "outputs": [
@@ -650,10 +657,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.138180Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.137977Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.079914Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.079168Z"
+     "iopub.execute_input": "2025-11-15T18:36:04.476571Z",
+     "iopub.status.busy": "2025-11-15T18:36:04.476432Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.596619Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.596282Z"
     }
    },
    "outputs": [
@@ -667,12 +674,28 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_20676/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
+      "  S_class, w_class, info_class = fit_ddc_coreset(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "Class 1: 8,181 samples (23.93%)\n",
       "  Allocating 239 representatives...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_20676/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
+      "  S_class, w_class, info_class = fit_ddc_coreset(\n"
      ]
     },
     {
@@ -755,10 +778,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.082372Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.082172Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.087875Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.087151Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.599219Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.599089Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.602307Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.602036Z"
     }
    },
    "outputs": [
@@ -819,10 +842,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.090654Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.089972Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.093695Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.092999Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.603646Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.603560Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.606697Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.605408Z"
     }
    },
    "outputs": [
@@ -849,10 +872,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.096316Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.096151Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.101786Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.101138Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.608238Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.608152Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.611654Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.611416Z"
     }
    },
    "outputs": [],
@@ -925,21 +948,13 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.104508Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.104366Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.759507Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.754422Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.612970Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.612884Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.733754Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.733462Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_14151/4218522511.py:30: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
-      "  w1 = np.trapz(np.abs(source_cdf_interp - target_cdf_interp), all_values)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -961,6 +976,14 @@
       "Feature 2     0.0331    0.0135             0.0637\n",
       "Feature 3     0.0092    0.0174             0.0535\n",
       "Feature 4     0.0105    0.0090             0.0335\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_20676/4218522511.py:30: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
+      "  w1 = np.trapz(np.abs(source_cdf_interp - target_cdf_interp), all_values)\n"
      ]
     }
    ],
@@ -1011,10 +1034,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.782157Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.781969Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.789985Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.789555Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.735233Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.735145Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.738377Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.738017Z"
     }
    },
    "outputs": [
@@ -1079,10 +1102,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.791997Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.791876Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.957243Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.956773Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.740094Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.739981Z",
+     "iopub.status.idle": "2025-11-15T18:36:10.786117Z",
+     "shell.execute_reply": "2025-11-15T18:36:10.785652Z"
     }
    },
    "outputs": [],
@@ -1172,10 +1195,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.959434Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.959255Z",
-     "iopub.status.idle": "2025-11-15T18:19:35.721849Z",
-     "shell.execute_reply": "2025-11-15T18:19:35.721487Z"
+     "iopub.execute_input": "2025-11-15T18:36:10.787694Z",
+     "iopub.status.busy": "2025-11-15T18:36:10.787553Z",
+     "iopub.status.idle": "2025-11-15T18:36:11.516773Z",
+     "shell.execute_reply": "2025-11-15T18:36:11.516435Z"
     }
    },
    "outputs": [
@@ -1284,10 +1307,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:35.725645Z",
-     "iopub.status.busy": "2025-11-15T18:19:35.725519Z",
-     "iopub.status.idle": "2025-11-15T18:19:35.735500Z",
-     "shell.execute_reply": "2025-11-15T18:19:35.735022Z"
+     "iopub.execute_input": "2025-11-15T18:36:11.518583Z",
+     "iopub.status.busy": "2025-11-15T18:36:11.518345Z",
+     "iopub.status.idle": "2025-11-15T18:36:11.526686Z",
+     "shell.execute_reply": "2025-11-15T18:36:11.526408Z"
     }
    },
    "outputs": [
@@ -1331,10 +1354,10 @@
    "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:35.737362Z",
-     "iopub.status.busy": "2025-11-15T18:19:35.737205Z",
-     "iopub.status.idle": "2025-11-15T18:19:35.762996Z",
-     "shell.execute_reply": "2025-11-15T18:19:35.762695Z"
+     "iopub.execute_input": "2025-11-15T18:36:11.528053Z",
+     "iopub.status.busy": "2025-11-15T18:36:11.527965Z",
+     "iopub.status.idle": "2025-11-15T18:36:11.544885Z",
+     "shell.execute_reply": "2025-11-15T18:36:11.544559Z"
     }
    },
    "outputs": [
@@ -1406,10 +1429,10 @@
    "execution_count": 20,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:35.764971Z",
-     "iopub.status.busy": "2025-11-15T18:19:35.764781Z",
-     "iopub.status.idle": "2025-11-15T18:19:36.789227Z",
-     "shell.execute_reply": "2025-11-15T18:19:36.787486Z"
+     "iopub.execute_input": "2025-11-15T18:36:11.546690Z",
+     "iopub.status.busy": "2025-11-15T18:36:11.546576Z",
+     "iopub.status.idle": "2025-11-15T18:36:11.758866Z",
+     "shell.execute_reply": "2025-11-15T18:36:11.758618Z"
     }
    },
    "outputs": [
@@ -1466,10 +1489,10 @@
    "execution_count": 21,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:36.804323Z",
-     "iopub.status.busy": "2025-11-15T18:19:36.804146Z",
-     "iopub.status.idle": "2025-11-15T18:19:38.086562Z",
-     "shell.execute_reply": "2025-11-15T18:19:38.085978Z"
+     "iopub.execute_input": "2025-11-15T18:36:11.760441Z",
+     "iopub.status.busy": "2025-11-15T18:36:11.760319Z",
+     "iopub.status.idle": "2025-11-15T18:36:13.245270Z",
+     "shell.execute_reply": "2025-11-15T18:36:13.244967Z"
     }
    },
    "outputs": [
@@ -1533,10 +1556,10 @@
    "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:38.090843Z",
-     "iopub.status.busy": "2025-11-15T18:19:38.090592Z",
-     "iopub.status.idle": "2025-11-15T18:19:38.218615Z",
-     "shell.execute_reply": "2025-11-15T18:19:38.217967Z"
+     "iopub.execute_input": "2025-11-15T18:36:13.248585Z",
+     "iopub.status.busy": "2025-11-15T18:36:13.248443Z",
+     "iopub.status.idle": "2025-11-15T18:36:13.388055Z",
+     "shell.execute_reply": "2025-11-15T18:36:13.387587Z"
     }
    },
    "outputs": [
