docs: Generate figures for all tutorial notebooks
- Executed all 5 tutorial notebooks successfully
- Generated figures for documentation
- All notebooks now have execution outputs and saved figures

--- a/docs/book/tutorials/label_aware_classification.ipynb
+++ b/docs/book/tutorials/label_aware_classification.ipynb
@@ -31,10 +31,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:01.095730Z",
-     "iopub.status.busy": "2025-11-15T18:36:01.095623Z",
-     "iopub.status.idle": "2025-11-15T18:36:01.102057Z",
-     "shell.execute_reply": "2025-11-15T18:36:01.101792Z"
+     "iopub.execute_input": "2025-11-15T18:45:36.481651Z",
+     "iopub.status.busy": "2025-11-15T18:45:36.481565Z",
+     "iopub.status.idle": "2025-11-15T18:45:36.485620Z",
+     "shell.execute_reply": "2025-11-15T18:45:36.485286Z"
     }
    },
    "outputs": [],
@@ -52,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:01.103576Z",
-     "iopub.status.busy": "2025-11-15T18:36:01.103482Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.250884Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.250573Z"
+     "iopub.execute_input": "2025-11-15T18:45:36.487489Z",
+     "iopub.status.busy": "2025-11-15T18:45:36.487354Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.379715Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.379434Z"
     }
    },
    "outputs": [
@@ -116,10 +116,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.253234Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.252859Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.398864Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.398393Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.404859Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.404657Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.555559Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.555239Z"
     }
    },
    "outputs": [
@@ -344,10 +344,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.400652Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.400425Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.406406Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.405995Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.557322Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.557202Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.563024Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.562614Z"
     }
    },
    "outputs": [
@@ -396,10 +396,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.408430Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.408156Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.425407Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.425139Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.564599Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.564460Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.581373Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.580837Z"
     }
    },
    "outputs": [
@@ -410,7 +410,13 @@
       "Training set: 34,189 samples\n",
       "Test set: 14,653 samples\n",
       "\n",
-      "Training label distribution:\n",
+      "Training label distribution:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  Class 0: 26,008 (76.07%)\n",
       "  Class 1: 8,181 (23.93%)\n"
      ]
@@ -451,10 +457,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.427360Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.427222Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.452252Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.451973Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.583490Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.583323Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.607844Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.607257Z"
     }
    },
    "outputs": [
@@ -462,14 +468,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Full-Data Baseline Metrics:"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
+      "Full-Data Baseline Metrics:\n",
       "  ROC AUC:  0.8316\n",
       "  Brier Score: 0.1291\n",
       "  Accuracy:    0.8181\n"
@@ -528,10 +527,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.454095Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.453927Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.456881Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.456105Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.609758Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.609613Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.611779Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.611403Z"
     }
    },
    "outputs": [
@@ -553,10 +552,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.459388Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.459226Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.463627Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.463288Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.613442Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.613300Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.617470Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.616824Z"
     }
    },
    "outputs": [
@@ -588,10 +587,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.465712Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.465404Z",
-     "iopub.status.idle": "2025-11-15T18:36:04.475108Z",
-     "shell.execute_reply": "2025-11-15T18:36:04.474609Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.619590Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.619417Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.629819Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.629439Z"
     }
    },
    "outputs": [
@@ -657,10 +656,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:04.476571Z",
-     "iopub.status.busy": "2025-11-15T18:36:04.476432Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.596619Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.596282Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.633532Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.633201Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.267263Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.266898Z"
     }
    },
    "outputs": [
@@ -677,7 +676,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_20676/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_23394/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
       "  S_class, w_class, info_class = fit_ddc_coreset(\n"
      ]
     },
@@ -694,7 +693,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_20676/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_23394/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
       "  S_class, w_class, info_class = fit_ddc_coreset(\n"
      ]
     },
@@ -778,10 +777,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.599219Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.599089Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.602307Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.602036Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.271810Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.271657Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.274931Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.274587Z"
     }
    },
    "outputs": [
@@ -842,10 +841,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.603646Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.603560Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.606697Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.605408Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.276517Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.276428Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.278376Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.278119Z"
     }
    },
    "outputs": [
@@ -872,10 +871,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.608238Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.608152Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.611654Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.611416Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.279716Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.279624Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.284394Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.284140Z"
     }
    },
    "outputs": [],
@@ -948,10 +947,10 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.612970Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.612884Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.733754Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.733462Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.286018Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.285925Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.400724Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.400229Z"
     }
    },
    "outputs": [
@@ -982,7 +981,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_20676/4218522511.py:30: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_23394/4218522511.py:30: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
       "  w1 = np.trapz(np.abs(source_cdf_interp - target_cdf_interp), all_values)\n"
      ]
     }
@@ -1034,10 +1033,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.735233Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.735145Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.738377Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.738017Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.402249Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.402156Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.405307Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.405066Z"
     }
    },
    "outputs": [
@@ -1102,10 +1101,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.740094Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.739981Z",
-     "iopub.status.idle": "2025-11-15T18:36:10.786117Z",
-     "shell.execute_reply": "2025-11-15T18:36:10.785652Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.406711Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.406631Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.461280Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.460956Z"
     }
    },
    "outputs": [],
@@ -1195,10 +1194,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:10.787694Z",
-     "iopub.status.busy": "2025-11-15T18:36:10.787553Z",
-     "iopub.status.idle": "2025-11-15T18:36:11.516773Z",
-     "shell.execute_reply": "2025-11-15T18:36:11.516435Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.463239Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.463075Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.124216Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.123950Z"
     }
    },
    "outputs": [
@@ -1307,10 +1306,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:11.518583Z",
-     "iopub.status.busy": "2025-11-15T18:36:11.518345Z",
-     "iopub.status.idle": "2025-11-15T18:36:11.526686Z",
-     "shell.execute_reply": "2025-11-15T18:36:11.526408Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.125649Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.125519Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.134506Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.134245Z"
     }
    },
    "outputs": [
@@ -1354,10 +1353,10 @@
    "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:11.528053Z",
-     "iopub.status.busy": "2025-11-15T18:36:11.527965Z",
-     "iopub.status.idle": "2025-11-15T18:36:11.544885Z",
-     "shell.execute_reply": "2025-11-15T18:36:11.544559Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.136688Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.136533Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.151748Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.151496Z"
     }
    },
    "outputs": [
@@ -1429,10 +1428,10 @@
    "execution_count": 20,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:11.546690Z",
-     "iopub.status.busy": "2025-11-15T18:36:11.546576Z",
-     "iopub.status.idle": "2025-11-15T18:36:11.758866Z",
-     "shell.execute_reply": "2025-11-15T18:36:11.758618Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.153078Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.152970Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.463887Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.463202Z"
     }
    },
    "outputs": [
@@ -1489,10 +1488,10 @@
    "execution_count": 21,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:11.760441Z",
-     "iopub.status.busy": "2025-11-15T18:36:11.760319Z",
-     "iopub.status.idle": "2025-11-15T18:36:13.245270Z",
-     "shell.execute_reply": "2025-11-15T18:36:13.244967Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.466038Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.465897Z",
+     "iopub.status.idle": "2025-11-15T18:45:47.502903Z",
+     "shell.execute_reply": "2025-11-15T18:45:47.502507Z"
     }
    },
    "outputs": [
@@ -1556,10 +1555,10 @@
    "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:36:13.248585Z",
-     "iopub.status.busy": "2025-11-15T18:36:13.248443Z",
-     "iopub.status.idle": "2025-11-15T18:36:13.388055Z",
-     "shell.execute_reply": "2025-11-15T18:36:13.387587Z"
+     "iopub.execute_input": "2025-11-15T18:45:47.506340Z",
+     "iopub.status.busy": "2025-11-15T18:45:47.506163Z",
+     "iopub.status.idle": "2025-11-15T18:45:47.615192Z",
+     "shell.execute_reply": "2025-11-15T18:45:47.614894Z"
     }
    },
    "outputs": [
