--- a/_sources/tutorials/label_aware_classification.ipynb
+++ b/_sources/tutorials/label_aware_classification.ipynb
@@ -31,10 +31,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:24.055667Z",
-     "iopub.status.busy": "2025-11-15T18:19:24.055524Z",
-     "iopub.status.idle": "2025-11-15T18:19:24.062156Z",
-     "shell.execute_reply": "2025-11-15T18:19:24.061855Z"
+     "iopub.execute_input": "2025-11-15T18:45:36.481651Z",
+     "iopub.status.busy": "2025-11-15T18:45:36.481565Z",
+     "iopub.status.idle": "2025-11-15T18:45:36.485620Z",
+     "shell.execute_reply": "2025-11-15T18:45:36.485286Z"
     }
    },
    "outputs": [],
@@ -52,10 +52,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:24.064084Z",
-     "iopub.status.busy": "2025-11-15T18:19:24.063932Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.628332Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.626815Z"
+     "iopub.execute_input": "2025-11-15T18:45:36.487489Z",
+     "iopub.status.busy": "2025-11-15T18:45:36.487354Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.379715Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.379434Z"
     }
    },
    "outputs": [
@@ -116,10 +116,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.669737Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.669484Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.829936Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.829412Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.404859Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.404657Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.555559Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.555239Z"
     }
    },
    "outputs": [
@@ -344,10 +344,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.831860Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.831714Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.849448Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.848047Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.557322Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.557202Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.563024Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.562614Z"
     }
    },
    "outputs": [
@@ -396,10 +396,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.868446Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.860683Z",
-     "iopub.status.idle": "2025-11-15T18:19:28.909718Z",
-     "shell.execute_reply": "2025-11-15T18:19:28.907618Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.564599Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.564460Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.581373Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.580837Z"
     }
    },
    "outputs": [
@@ -410,7 +410,13 @@
       "Training set: 34,189 samples\n",
       "Test set: 14,653 samples\n",
       "\n",
-      "Training label distribution:\n",
+      "Training label distribution:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "  Class 0: 26,008 (76.07%)\n",
       "  Class 1: 8,181 (23.93%)\n"
      ]
@@ -451,10 +457,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:28.914252Z",
-     "iopub.status.busy": "2025-11-15T18:19:28.913943Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.063342Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.061227Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.583490Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.583323Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.607844Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.607257Z"
     }
    },
    "outputs": [
@@ -521,10 +527,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.071106Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.070877Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.075881Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.074963Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.609758Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.609613Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.611779Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.611403Z"
     }
    },
    "outputs": [
@@ -546,10 +552,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.079056Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.078723Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.086912Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.085360Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.613442Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.613300Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.617470Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.616824Z"
     }
    },
    "outputs": [
@@ -581,10 +587,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.092274Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.092014Z",
-     "iopub.status.idle": "2025-11-15T18:19:29.136286Z",
-     "shell.execute_reply": "2025-11-15T18:19:29.135094Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.619590Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.619417Z",
+     "iopub.status.idle": "2025-11-15T18:45:39.629819Z",
+     "shell.execute_reply": "2025-11-15T18:45:39.629439Z"
     }
    },
    "outputs": [
@@ -650,10 +656,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:29.138180Z",
-     "iopub.status.busy": "2025-11-15T18:19:29.137977Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.079914Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.079168Z"
+     "iopub.execute_input": "2025-11-15T18:45:39.633532Z",
+     "iopub.status.busy": "2025-11-15T18:45:39.633201Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.267263Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.266898Z"
     }
    },
    "outputs": [
@@ -667,12 +673,28 @@
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_23394/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
+      "  S_class, w_class, info_class = fit_ddc_coreset(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "\n",
       "Class 1: 8,181 samples (23.93%)\n",
       "  Allocating 239 representatives...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_23394/23080767.py:34: DeprecationWarning: Parameter 'm_neighbors' is deprecated. Use 'mode', 'preset', or '*_cfg' dicts instead.\n",
+      "  S_class, w_class, info_class = fit_ddc_coreset(\n"
      ]
     },
     {
@@ -755,10 +777,10 @@
    "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.082372Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.082172Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.087875Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.087151Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.271810Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.271657Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.274931Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.274587Z"
     }
    },
    "outputs": [
@@ -819,10 +841,10 @@
    "execution_count": 12,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.090654Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.089972Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.093695Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.092999Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.276517Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.276428Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.278376Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.278119Z"
     }
    },
    "outputs": [
@@ -849,10 +871,10 @@
    "execution_count": 13,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.096316Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.096151Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.101786Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.101138Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.279716Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.279624Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.284394Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.284140Z"
     }
    },
    "outputs": [],
@@ -925,21 +947,13 @@
    "execution_count": 14,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.104508Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.104366Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.759507Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.754422Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.286018Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.285925Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.400724Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.400229Z"
     }
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_14151/4218522511.py:30: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
-      "  w1 = np.trapz(np.abs(source_cdf_interp - target_cdf_interp), all_values)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -961,6 +975,14 @@
       "Feature 2     0.0331    0.0135             0.0637\n",
       "Feature 3     0.0092    0.0174             0.0535\n",
       "Feature 4     0.0105    0.0090             0.0335\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/cg/mqv8qvn17hx0typ7nf1q0x2jjykzd2/T/ipykernel_23394/4218522511.py:30: DeprecationWarning: `trapz` is deprecated. Use `trapezoid` instead, or one of the numerical integration functions in `scipy.integrate`.\n",
+      "  w1 = np.trapz(np.abs(source_cdf_interp - target_cdf_interp), all_values)\n"
      ]
     }
    ],
@@ -1011,10 +1033,10 @@
    "execution_count": 15,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.782157Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.781969Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.789985Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.789555Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.402249Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.402156Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.405307Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.405066Z"
     }
    },
    "outputs": [
@@ -1079,10 +1101,10 @@
    "execution_count": 16,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.791997Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.791876Z",
-     "iopub.status.idle": "2025-11-15T18:19:34.957243Z",
-     "shell.execute_reply": "2025-11-15T18:19:34.956773Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.406711Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.406631Z",
+     "iopub.status.idle": "2025-11-15T18:45:45.461280Z",
+     "shell.execute_reply": "2025-11-15T18:45:45.460956Z"
     }
    },
    "outputs": [],
@@ -1172,10 +1194,10 @@
    "execution_count": 17,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:34.959434Z",
-     "iopub.status.busy": "2025-11-15T18:19:34.959255Z",
-     "iopub.status.idle": "2025-11-15T18:19:35.721849Z",
-     "shell.execute_reply": "2025-11-15T18:19:35.721487Z"
+     "iopub.execute_input": "2025-11-15T18:45:45.463239Z",
+     "iopub.status.busy": "2025-11-15T18:45:45.463075Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.124216Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.123950Z"
     }
    },
    "outputs": [
@@ -1284,10 +1306,10 @@
    "execution_count": 18,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:35.725645Z",
-     "iopub.status.busy": "2025-11-15T18:19:35.725519Z",
-     "iopub.status.idle": "2025-11-15T18:19:35.735500Z",
-     "shell.execute_reply": "2025-11-15T18:19:35.735022Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.125649Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.125519Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.134506Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.134245Z"
     }
    },
    "outputs": [
@@ -1331,10 +1353,10 @@
    "execution_count": 19,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:35.737362Z",
-     "iopub.status.busy": "2025-11-15T18:19:35.737205Z",
-     "iopub.status.idle": "2025-11-15T18:19:35.762996Z",
-     "shell.execute_reply": "2025-11-15T18:19:35.762695Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.136688Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.136533Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.151748Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.151496Z"
     }
    },
    "outputs": [
@@ -1406,10 +1428,10 @@
    "execution_count": 20,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:35.764971Z",
-     "iopub.status.busy": "2025-11-15T18:19:35.764781Z",
-     "iopub.status.idle": "2025-11-15T18:19:36.789227Z",
-     "shell.execute_reply": "2025-11-15T18:19:36.787486Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.153078Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.152970Z",
+     "iopub.status.idle": "2025-11-15T18:45:46.463887Z",
+     "shell.execute_reply": "2025-11-15T18:45:46.463202Z"
     }
    },
    "outputs": [
@@ -1466,10 +1488,10 @@
    "execution_count": 21,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:36.804323Z",
-     "iopub.status.busy": "2025-11-15T18:19:36.804146Z",
-     "iopub.status.idle": "2025-11-15T18:19:38.086562Z",
-     "shell.execute_reply": "2025-11-15T18:19:38.085978Z"
+     "iopub.execute_input": "2025-11-15T18:45:46.466038Z",
+     "iopub.status.busy": "2025-11-15T18:45:46.465897Z",
+     "iopub.status.idle": "2025-11-15T18:45:47.502903Z",
+     "shell.execute_reply": "2025-11-15T18:45:47.502507Z"
     }
    },
    "outputs": [
@@ -1533,10 +1555,10 @@
    "execution_count": 22,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-11-15T18:19:38.090843Z",
-     "iopub.status.busy": "2025-11-15T18:19:38.090592Z",
-     "iopub.status.idle": "2025-11-15T18:19:38.218615Z",
-     "shell.execute_reply": "2025-11-15T18:19:38.217967Z"
+     "iopub.execute_input": "2025-11-15T18:45:47.506340Z",
+     "iopub.status.busy": "2025-11-15T18:45:47.506163Z",
+     "iopub.status.idle": "2025-11-15T18:45:47.615192Z",
+     "shell.execute_reply": "2025-11-15T18:45:47.614894Z"
     }
    },
    "outputs": [
